--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <body>
 <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+<div class="float-container">
 <script>
 
     var linkpath = ("links.csv");
@@ -136,6 +137,7 @@
     });
 
 </script>
+</div>
 <div class="float-container">
     <div class="float-child">
     <table class="tg">
